acm-root/cluster/K8sBlockProcessNamespaceSharing.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockProcessNamespaceSharing
metadata:
  name: block-process-namespace-sharing
spec:
  enforcementAction: deny
