acm-root/cluster/K8sNoEnvVarSecrets.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoEnvVarSecrets
metadata:
  name: no-secrets-as-env-vars
  annotations:
    # This constraint is not certified by CIS.
    description: "Prohibits secrets as environment variables in container definitions;
      instead, use mounted secret files in data volumes."
spec:
  enforcementAction: deny # {"$kpt-set":"enforcementAction"}
