acm-root/cluster/K8sProhibitRoleWildcardAccess.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitRoleWildcardAccess
metadata:
  name: prohibit-role-wildcard-access
  annotations:
    # This constraint is not certified by CIS.
    description: "Restricts use of wildcards in Roles and ClusterRoles."
spec:
  enforcementAction: deny
