acm-root/cluster/K8sRestrictNamespaces.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: restrict-default-namespace
  annotations:
    # This constraint is not certified by CIS.
    description: "Restricts resources from using the `default` namespace."
spec:
  enforcementAction: deny # {"$kpt-set":"enforcementAction"}
  parameters:
    restrictedNamespaces:
    - default
